<resources>
    <string name="app_name">Weather</string>

    <string name="weather_item_date_text_debug">Date Name</string>
    <string name="weather_item_description_text_debug">description</string>
    <string name="weather_item_max_text">Max</string>
    <string name="weather_item_min_text">Min</string>
    <string name="weather_item_max_text_debug">max_value</string>
    <string name="weather_item_min_text_debug">min_value</string>
    <string name="category_title">Category</string>
    <string name="weather_temp_format">"%.0f˚C"</string>

    <string name="sn">Snow</string>
    <string name="sl">Sleet</string>
    <string name="h">Hail</string>
    <string name="t">ThunderStorm</string>
    <string name="hr">Heavy Rain</string>
    <string name="lr">Light Rain</string>
    <string name="s">Showers</string>
    <string name="hc">Heavy Cloud</string>
    <string name="lc">Light Cloud</string>
    <string name="c">Clear</string>

    <string name="activity_back_press">"종료하시려면 한번 더 누르세요."</string>
    <string name="activity_disconnect_network">"네트워크 연결이 되어 있지 않습니다.</string>
    <string name="activity_dialog_confirm">"확인"</string>


</resources>